objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>Application_Complete__c</fullName>
        <label>Application Complete?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if loan application has been received</inlineHelpText>
        <label>Application Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appraisal_Date__c</fullName>
        <label>Appraisal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appraiser</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Appraised Loans</relationshipLabel>
        <relationshipName>Appraised_Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assistance_Fee__c</fullName>
        <formula>IF(Loan_Amount__c + Contingency_Amount__c  &gt;= 25000, (Loan_Amount__c + Contingency_Amount__c)*0.02, 
 IF(Loan_Amount__c + Contingency_Amount__c &gt;= 10001 , (Loan_Amount__c + Contingency_Amount__c)*0.01, 0
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assistance Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <label>Bank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Key Bank</fullName>
                </value>
                <value>
                    <fullName>First Federal Lakewood</fullName>
                </value>
                <value>
                    <fullName>GenoaBank</fullName>
                </value>
                <value>
                    <fullName>Waterford Bank</fullName>
                </value>
                <value>
                    <fullName>Third Federal Savings and Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contingency_Amount__c</fullName>
        <label>Contingency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <inlineHelpText>Construction Completed date</inlineHelpText>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Denied__c</fullName>
        <label>Date Denied</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Signed__c</fullName>
        <label>Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Withdrawn__c</fullName>
        <label>Date Withdrawn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Remaining__c</fullName>
        <formula>Wrap_Up_Deadline__c -  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escrow_Agent__c</fullName>
        <label>Escrow Agent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CRS</fullName>
                </value>
                <value>
                    <fullName>Lucas County Treasurer</fullName>
                </value>
                <value>
                    <fullName>CASH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escrow_Fee__c</fullName>
        <label>Escrow Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Site_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Final Site Visit</label>
        <referenceTo>Inquiry__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>LoanFinalSiteVisit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funds_To__c</fullName>
        <label>Funds To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Escrow</fullName>
                </value>
                <value>
                    <fullName>Homeowner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property Image Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Assistance_Fee__c</fullName>
        <description>This is for the initial import from the legacy DB that Restoration Society was using prior to 2015</description>
        <label>Legacy Assistance Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Number__c</fullName>
        <label>Loan Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Officer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loans (Loan Officer)</relationshipLabel>
        <relationshipName>Loans_Officiating</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added to link Contacts to Loans. Property Owner could not be changed as it is a formula field.</description>
        <inlineHelpText>Select the Contact who owns the loan through the related property</inlineHelpText>
        <label>Loan Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loans (Loan Owner)</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Property_Street__c</fullName>
        <formula>Property__r.Street_Full__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Property Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Rate__c</fullName>
        <label>Loan Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Remainder__c</fullName>
        <formula>(((Loan_Amount__c)+( Contingency_Amount__c )) - Total_Drawn2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Remainder</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Status_Notes__c</fullName>
        <inlineHelpText>Enter notes on the loan</inlineHelpText>
        <label>Loan Status Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Loan_Status__c</fullName>
        <label>Loan Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>applied</fullName>
                </value>
                <value>
                    <fullName>completed bank documentation</fullName>
                </value>
                <value>
                    <fullName>signed - open</fullName>
                </value>
                <value>
                    <fullName>signed - completed</fullName>
                </value>
                <value>
                    <fullName>denied</fullName>
                </value>
                <value>
                    <fullName>withdrawn</fullName>
                </value>
                <value>
                    <fullName>loan_deadend</fullName>
                    <label>deadend</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Years__c</fullName>
        <label>Loan Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Image_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Image Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Approval_Amount__c</fullName>
        <label>Pre Approval Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Approval_Date__c</fullName>
        <label>Pre Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <formula>Property__r.City__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Owner__c</fullName>
        <formula>Property__r.Owner__r.FirstName &amp; &quot; &quot; &amp;  Property__r.Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Ward__c</fullName>
        <formula>Property__r.Ward__r.Ward_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Ward</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Withdrawn__c</fullName>
        <label>Reason Withdrawn</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Retainer_to_be_Released__c</fullName>
        <formula>Total_Retainer__c  -  Total_Retainer_Drawn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retainer to be Released</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subsidy__c</fullName>
        <label>Subsidy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C County</fullName>
                </value>
                <value>
                    <fullName>OHFA</fullName>
                </value>
                <value>
                    <fullName>ECO-Link</fullName>
                </value>
                <value>
                    <fullName>Lucas County</fullName>
                </value>
                <value>
                    <fullName>Treasurer of Ohio</fullName>
                </value>
                <value>
                    <fullName>CASH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Contingency_Amount__c +  Escrow_Fee__c + Loan_Amount__c +  Assistance_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Drawn2__c</fullName>
        <label>Total Drawn</label>
        <summarizedField>Loan_Disbursement__c.Draw_Amount__c</summarizedField>
        <summaryForeignKey>Loan_Disbursement__c.Loan_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Retainer_Drawn__c</fullName>
        <inlineHelpText>Compare to &quot;Total Retainer&quot; field to know how much is left to be released</inlineHelpText>
        <label>Total Retainer Drawn</label>
        <summarizedField>Loan_Disbursement__c.Retainer_Draw_Amount__c</summarizedField>
        <summaryForeignKey>Loan_Disbursement__c.Loan_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Retainer__c</fullName>
        <label>Total Retainer</label>
        <summarizedField>Loan_Disbursement__c.Retainer_Amount__c</summarizedField>
        <summaryForeignKey>Loan_Disbursement__c.Loan_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>As-Is</fullName>
                </value>
                <value>
                    <fullName>After-Rehab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ward_Number__c</fullName>
        <formula>Property__r.Ward__r.Ward_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ward Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wrap_Up_Deadline__c</fullName>
        <formula>Date_Signed__c+540</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is auto-generated deadline.  540 days after signed date.</inlineHelpText>
        <label>Wrap Up Deadline</label>
        <type>Date</type>
    </fields>
    <label>Loan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Property_Owner__c</columns>
        <columns>Property__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Loan_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Total_Amount__c</columns>
        <columns>Loan_Property_Street__c</columns>
        <columns>Date_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_Owner__c</field>
            <operation>contains</operation>
            <value>hendricks</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOAN-{000000}</displayFormat>
        <label>Loan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>